Display stopwatch with js
Use js to display timer + sync timers

--- a/lib/stopwatch_web/templates/stopwatch/stopwatch_js.html.heex
+++ b/lib/stopwatch_web/templates/stopwatch/stopwatch_js.html.heex
@@ -1,4 +1,4 @@
-<h1>JS version</h1>
+<h1 id="timer">00:00:00</h1>
 
 <%= if @timer_status == :stopped do %>
   <button phx-click="start">Start</button>
